# date-shortener

./: .gitignore  Cargo.toml  README.md  builder.sh  wapm.toml
src/: endec.rs  main.rs
