[package]
name = "date-shortener"
version = "0.2.1"
authors = ["Abhishek Kumar <akbittu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
getopts = "0.2"

[[bin]]
name = "ds"
path = "src/main.rs"